--- a/app/views/words/_word.html.erb
+++ b/app/views/words/_word.html.erb
@@ -5,9 +5,14 @@
     <span class="category"><%= word.display_category %></span>
   </div>
 
-  <p class="translations">
-    <%= word.translations_for(t("lang_key")) %>
-  </p>
+  <% translations = word.translations_for(t("lang_key")) %>
+  <% if translations.is_a?(Array) %>
+    <% translations.each do |tr| %>
+      <p class="translations"><span class="translation-label"><%= tr[:label] %>:</span> <%= tr[:text] %></p>
+    <% end %>
+  <% else %>
+    <p class="translations"><%= translations %></p>
+  <% end %>
 
   <% examples = word.examples_for(t("lang_key")) %>
   <% if examples.any? %>
