feat: add translation

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -17,7 +17,7 @@
       </span>
     </div>
     <div class="about-stat">
-      <span class="about-stat-label">Esperanto</span>
+      <span class="about-stat-label"><%= t("about.esperanto") %></span>
       <span class="about-stat-value">
         <span class="about-stat-number"><%= number_with_delimiter(@eo_count) %></span>
         <span class="about-stat-unit"><%= t("about.words") %></span>
